few design changes and README

--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Pie Chart</title>
 
+    <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="./css/anchart3d.css">
     <link rel="stylesheet" type="text/css" href="./css/stylesheet.css">
     <script type="text/javascript" src="./../build/anchart3d.js"></script>
@@ -11,13 +12,11 @@
 <body>
 
 <div id="wrapper">
-<img src="img/fh.png" alt="FH Joanneum" style="height:130px; position:absolute; top:-15px; right:10px;" />
+<img src="img/fh.png" alt="FH Joanneum" style="height:95px; position:fixed; background:#fff; border:1px solid #000; top:20px; right:20px;" />
 <h1>anchart3d - BÜPA Präsentation</h1>
-<h2>PieChart</h2>
-<input type="button" onClick="swapPie()" value="swap data">
+<h2>PieChart <a href="javascript:void()" onClick="swapPie()">&#9889;</a></h2>
 <div id="blatestpie"></div>
-<h2>BarChart</h2>
-<input type="button" onClick="swapBar()" value="swap data">
+<h2>BarChart <a href="javascript:void()" onClick="swapBar()">&#9889;</a></h2>
 <div id="blatestpie2"></div>
 </div>
 
