proper forwarder address

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="de">
 <head>
     <title>anchart3d</title>
-    <meta http-equiv="refresh" content="0; url=http://repo.github.io/folder/index.html" />
+    <meta http-equiv="refresh" content="0; url=http://dekilla.github.io/anchart3d/public/index.html" />
 </head>
 <body>
 </body>
