--- a/public/index.html
+++ b/public/index.html
@@ -16,9 +16,9 @@
 <div id="wrapper">
 <img src="img/fh.png" alt="FH Joanneum" style="height:95px; position:fixed; background:#fff; border:1px solid #000; top:20px; right:20px;" />
 <h1>anchart3d - BÜPA Präsentation</h1>
-<h2>PieChart <a href="javascript:void()" onClick="swapPie()">&#9889;</a></h2>
+<h2>PieChart <a href="javascript:;" onClick="swapPie()">&#9889;</a></h2>
 <div id="pieChart"></div>
-<h2>BarChart <a href="javascript:void()" onClick="swapBar()">&#9889;</a></h2>
+<h2>BarChart <a href="javascript:;" onClick="swapBar()">&#9889;</a></h2>
 <div id="barChart"></div>
 </div>
 
@@ -105,9 +105,9 @@
                 {"name":"1.Semester", "value":59},
                 {"name":"2.Semester", "value":44},
                 {"name":"3.Semester", "value":38},
-                {"name":"4.Semester", "value":36},
-                {"name":"5.Semester", "value":29},
-                {"name":"6.Semester", "value":28}
+                {"name":"4.Semester", "value":35},
+                {"name":"5.Semester", "value":33},
+                {"name":"6.Semester", "value":27}
             ]
         }
     ];
@@ -149,12 +149,12 @@ var barChart = anchart3d.createChart("barChart")
     .draw(); //.draw() must be last
 
     var swapPie = function () {
-        pieChart.data(jsonData2,"Einwohner");
+        pieChart.data(jsonData1,"Einwohner");
         pieChart.swapData();
     };
 
     var swapBar = function () {
-        barChart.data(jsonData1,"Einwohner");
+        barChart.data(jsonData1,"DSGehalt");
         barChart.swapData();
     };
 
