fixed live data swap...now also resetting chart position

--- a/public/index.html
+++ b/public/index.html
@@ -2,19 +2,19 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Pie Chart</title>
+    <title>anchart3d</title>
 
     <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="./css/anchart3d.css">
     <link rel="stylesheet" type="text/css" href="./css/stylesheet.css">
-    <script type="text/javascript" src="./js/anchart3d.js"></script>
+    <script type="text/javascript" src="../build/anchart3d.js"></script>
 </head>
 <body>
 
 <a href="https://github.com/deKilla/anchart3d"><img style="position: absolute; top: 0; left: 0; border: 0;" src="https://camo.githubusercontent.com/121cd7cbdc3e4855075ea8b558508b91ac463ac2/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f6c6566745f677265656e5f3030373230302e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_left_green_007200.png"></a>
 
 <div id="wrapper">
-<img src="img/fh.png" alt="FH Joanneum" style="height:95px; position:fixed; background:#fff; border:1px solid #000; top:20px; right:20px;" />
+<a href="https://fh-joanneum.at/informationsmanagement/bachelor/"><img src="img/fh.png" alt="FH Joanneum" style="height:95px; position:fixed; background:#fff; border:1px solid #000; top:20px; right:20px;" /></a>
 <h1>anchart3d - BÜPA Präsentation</h1>
 <h2>PieChart <a href="javascript:;" onClick="swapPie()">&#9889;</a></h2>
 <div id="pieChart"></div>
