fixed SceneInit and grid now showing in scene: -SceneInit is now iterating over datasets for tooltip and details (because of different dataset count on each chart type) -Grid is now displayed in scene, still too big and not drawing correctly! -dimension of grid too big, entities too small

--- a/public/index.html
+++ b/public/index.html
@@ -116,7 +116,9 @@
         {
             "name":"Dataset1",
             "values": [
-                {"name":"Position", "value":[55,47,39]},
+                {"name":"X", "value":20},
+                {"name":"Y", "value":39},
+                {"name":"Z", "value":47},
                 {"name":"size", "value":32},
                 {"name":"shape", "value":"sphere"}
             ]
@@ -124,8 +126,10 @@
         {
             "name":"Dataset2",
             "values": [
-                {"name":"Position", "value":[42,47,39]},
-                {"name":"size", "value":57},
+                {"name":"X", "value":150},
+                {"name":"Y", "value":62},
+                {"name":"Z", "value":11},
+                {"name":"size", "value":70},
                 {"name":"shape", "value":"sphere"}
             ]
         }
