shapes now also available: - choose between: sphere, cone, diamond - if no 5th dimension (e.g. shape) is defined, sphere will be taken as default shape

--- a/public/index.html
+++ b/public/index.html
@@ -130,7 +130,7 @@
                 {"name":"Y", "value":51},
                 {"name":"Z", "value":51},
                 {"name":"size", "value":22},
-                {"name":"shape", "value":"sphere"}
+                {"name":"shape", "value":"cone"}
             ]
         },
         {
@@ -140,7 +140,7 @@
                 {"name":"Y", "value":12},
                 {"name":"Z", "value":44},
                 {"name":"size", "value":12},
-                {"name":"shape", "value":"sphere"}
+                {"name":"shape", "value":"diamond"}
             ]
         },
         {
@@ -160,7 +160,7 @@
                 {"name":"Y", "value":25},
                 {"name":"Z", "value":25},
                 {"name":"size", "value":35},
-                {"name":"shape", "value":"sphere"}
+                {"name":"shape", "value":"cone"}
             ]
         },
         {
@@ -170,7 +170,7 @@
                 {"name":"Y", "value":41},
                 {"name":"Z", "value":1},
                 {"name":"size", "value":10},
-                {"name":"shape", "value":"sphere"}
+                {"name":"shape", "value":"diamond"}
             ]
         }
     ];
