fixed rotation of all charts and positioning for dataswap function

--- a/public/index.html
+++ b/public/index.html
@@ -194,7 +194,7 @@ var configuration_bc = {
     "tooltip": true,
     "showOnScreenControls": true,
     "legend": true,
-    "startAnimation": false,
+    "startAnimation": true,
     "chartAnimation": true,
     "transparency": true,
     "antialias": true,
