--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
 <a href="https://fh-joanneum.at/informationsmanagement/bachelor/"><img src="img/fh.png" alt="FH Joanneum" style="height:95px; position:fixed; background:#fff; border:1px solid #000; top:20px; right:20px;" /></a>
 <h1>anchart3d - BÜPA Präsentation</h1>
 <h2>PieChart <a href="javascript:;" onClick="swapPie()">&#9889;</a></h2>
-<div id="pieChart"></div>
+<div id="lineChart"></div>
 <h2>BarChart <a href="javascript:;" onClick="swapBar()">&#9889;</a></h2>
 <div id="barChart"></div>
 </div>
@@ -214,9 +214,9 @@ var configuration_sc = {
 };
 
 
- var pieChart = anchart3d.createChart("pieChart")
+ var lineChart = anchart3d.createChart("lineChart")
     .setConfig(configuration_bc)
-    .barChart()
+    .lineChart()
     .data(jsonData2)// to sort: .chartData(jsonData, "Einwohner") - sortiert nach Einwohnern
     .draw(); //.draw() must be last
 
