--- a/public/developing.html
+++ b/public/developing.html
@@ -40,17 +40,21 @@
 </div>
 <div class="content">
     
-    <h1>anchart3d</h1>
-    <h3>An open source library for interactive three dimensional charts</h3>
+    <h1>developing</h1>
+    <h3>How you can contribute to this project.</h3>
     <p>
-    This library has been created as part of an project on the FH Joanneum Graz. It was made by Amar Bajric, Michael Fuchs and Timo Hasenbichler and supervised by FH-Prof. DI Dr. Peter Salhofer.
+    Feel free to <a href="https://github.com/deKilla/anchart3d" target="blank">fork</a> this project an participate in it's development.
     </p>
     <p>
-    The libray is one of just a few contender in the world of visualizing data in three dimensions using not only perspectives but interaction. Also it is completly free since it is open source. Our goal was to provide a good base and to show what the library is capable of and enable the community to build on that and make anchart3d a worthy contender in the world of data visualization.
+    You will need <a href="https://nodejs.org/en/" target="blank">node.js</a> and <a href="https://www.npmjs.com/" target="blank">npm</a> in order to run it.
     </p>
-    <p>
-    The libry is build using es6 and relies on three.js to render the charts.
-    </p>
+    <h4>Step 1:</h4>
+    &gt; npm install
+    <h4>Step 2:</h4>
+    &gt; npm start <i class="fhgreen">webpack watcher</i><br/>
+    &gt; npm build <i class="fhgreen">quickly build the project</i><br/>
+    &gt; npm minify <i class="fhgreen">minify using uglify</i><br/>
+    &gt; npm test <i class="fhgreen">testing via jest</i><br/>
 
 </div>
 
