--- a/public/developing.html
+++ b/public/developing.html
@@ -41,7 +41,7 @@
 <div class="content">
     
     <h1>developing</h1>
-    <h3>How you can contribute to this project.</h3>
+    <h3>how you can contribute to this project</h3>
     <p>
     Feel free to <a href="https://github.com/deKilla/anchart3d" target="blank">fork</a> this project an participate in it's development.
     </p>
