--- a/public/index.html
+++ b/public/index.html
@@ -41,7 +41,7 @@
 <div class="content">
     
     <h1>anchart3d</h1>
-    <h3>An open source library for interactive three dimensional charts</h3>
+    <h3>an open source library for interactive three dimensional charts</h3>
     <p>
     This library has been created as part of an project on the FH Joanneum Graz. It was made by Amar Bajric, Michael Fuchs and Timo Hasenbichler and supervised by FH-Prof. DI Dr. Peter Salhofer.
     </p>
