--- a/public/multiple.html
+++ b/public/multiple.html
@@ -40,9 +40,12 @@
 </div>
 <div class="content">
     
-    <h1>pieChart</h1>
+    <h1>multiple</h1>
+    <h3>displaying multiple charts on a single page</h3>
     <p>Is halt nix da weil der Dreck bei mir net rennt :(</p>
     <div id="pieChart"></div>
+    <div id="barChart"></div>
+    <div id="scatterChart"></div>
 
 </div>
 <br class="clear" />
