fixed some minor bugs for html sites

--- a/public/index.html
+++ b/public/index.html
@@ -49,7 +49,7 @@
     The libray is one of just a few contender in the world of visualizing data in three dimensions using not only perspectives but interaction. Also it is completly free since it is open source. Our goal was to provide a good base and to show what the library is capable of and enable the community to build on that and make anchart3d a worthy contender in the world of data visualization.
     </p>
     <p>
-    The libry is build using es6 and relies on three.js to render the charts.
+    The library is build using ES6 and relies on <a href="https://threejs.org/">three.js</a> to render the charts.
     </p>
 
 </div>
