--- a/public/bar.html
+++ b/public/bar.html
@@ -23,11 +23,11 @@
 <div class="right">
     
     <ul id="menu">
-    <li><a class="active" href="index.html">About</a></li>
+    <li><a href="index.html">About</a></li>
     <li>Demo
         <ul>
         <li><a href="pie.html">PieChart</a></li>
-        <li><a href="bar.html">BarChart</a></li>
+        <li><a class="active" href="bar.html">BarChart</a></li>
         <li><a href="scatter.html">ScatterChart</a>
         <li><a href="multiple.html">Multiple</a>
         </ul>
@@ -101,6 +101,7 @@
         }
     ];
 
+
     var jsonData2 = [
         {
             "name":"IMA2014",
@@ -137,82 +138,8 @@
         }
     ];
 
-    var jsonData3 = [
-        {
-            "name":"Dataset1",
-            "values": [
-                {"name":"X", "value":0.5},
-                {"name":"Y", "value":0.7},
-                {"name":"Z", "value":0.3},
-                {"name":"size", "value":11},
-                {"name":"shape", "value":"sphere"}
-            ]
-        },
-        {
-            "name":"Dataset2",
-            "values": [
-                {"name":"X", "value":2.44},
-                {"name":"Y", "value":0.16},
-                {"name":"Z", "value":0.59},
-                {"name":"size", "value":22},
-                {"name":"shape", "value":"cone"}
-            ]
-        },
-        {
-            "name":"Dataset3",
-            "values": [
-                {"name":"X", "value":0.21},
-                {"name":"Y", "value":0.12},
-                {"name":"Z", "value":0.44},
-                {"name":"size", "value":12},
-                {"name":"shape", "value":"diamond"}
-            ]
-        },
-        {
-            "name":"Dataset4",
-            "values": [
-                {"name":"X", "value":3.16},
-                {"name":"Y", "value":0.82},
-                {"name":"Z", "value":0.12},
-                {"name":"size", "value":7},
-                {"name":"shape", "value":"sphere"}
-            ]
-        },
-        {
-            "name":"Dataset5",
-            "values": [
-                {"name":"X", "value":3.99},
-                {"name":"Y", "value":0.25},
-                {"name":"Z", "value":0.33},
-                {"name":"size", "value":18},
-                {"name":"shape", "value":"cone"}
-            ]
-        },
-        {
-            "name":"Dataset6",
-            "values": [
-                {"name":"X", "value":1.52},
-                {"name":"Y", "value":0.41},
-                {"name":"Z", "value":0.1},
-                {"name":"size", "value":10},
-                {"name":"shape", "value":"diamond"}
-            ]
-        }
-    ];
 
 
-
-var configuration_pc = {
-    "details": true,
-    "tooltip": true,
-    "showOnScreenControls": true,
-    "legend": true,
-    "startAnimation": true,
-    "chartAnimation": true,
-    "transparency": true,
-    "antialias": true,
-    "fov": 45
-};
 
 var configuration_bc = {
     "details": true,
@@ -226,24 +153,7 @@ var configuration_bc = {
     "fov": 45
 };
 
-var configuration_sc = {
-    "details": true,
-    "tooltip": true,
-    "showOnScreenControls": true,
-    "legend": true,
-    "startAnimation": true,
-    "chartAnimation": true,
-    "transparency": true,
-    "antialias": true,
-    "fov": 45
-};
 
-
- var pieChart = anchart3d.createChart("pieChart")
-    .setConfig(configuration_bc)
-    .barChart()
-    .data(jsonData2)
-    .draw();
 
 var barChart = anchart3d.createChart("barChart")
     .setConfig(configuration_bc)
@@ -251,27 +161,12 @@ var barChart = anchart3d.createChart("barChart")
     .data(jsonData2)
     .draw();
 
-var scatterChart = anchart3d.createChart("scatterChart")
-    .setConfig(configuration_sc)
-    .scatterChart()
-    .data(jsonData3)
-    .draw();
 
+var swapBar = function () {
+    pieChart.data(jsonData1);
+    pieChart.swapData();
+}
 
-    var swapPie = function () {
-        pieChart.data(jsonData1);
-        pieChart.swapData();
-    };
-
-    var swapBar = function () {
-        pieChart.data(jsonData2);
-        pieChart.swapData();
-    };
-
-    var swapScatter = function () {
-        scatterChart.data(jsonData3);
-        scatterChart.swapData();
-    };
 
 </script>
 
