--- a/public/developing.html
+++ b/public/developing.html
@@ -34,7 +34,7 @@
     </li>
     <li><a href="usage.html">Usage</a></li>
     <li><a href="configuration.html">Configuration</a></li>
-    <li><a href="developing.html">Developing</a></li>
+    <li><a class="active" href="developing.html">Developing</a></li>
     </ul>
 
 </div>
