--- a/public/pie.html
+++ b/public/pie.html
@@ -23,15 +23,17 @@
 <div class="right">
     
     <ul id="menu">
-    <li><a class="active" href="index.html">About</a></li>
-    <li>Demo
+    <li><a href="index.html">About</a></li>
+    <hr>
+    <li><u>Demos:</u>
         <ul>
-        <li><a href="pie.html">PieChart</a></li>
+        <li><a class="active" href="pie.html">PieChart</a></li>
         <li><a href="bar.html">BarChart</a></li>
         <li><a href="scatter.html">ScatterChart</a>
         <li><a href="multiple.html">Multiple</a>
         </ul>
     </li>
+    <hr>
     <li><a href="usage.html">Usage</a></li>
     <li><a href="configuration.html">Configuration</a></li>
     <li><a href="developing.html">Developing</a></li>
@@ -101,105 +103,6 @@
         }
     ];
 
-    var jsonData2 = [
-        {
-            "name":"IMA2014",
-            "values": [
-                {"name":"1.Semester", "value":55},
-                {"name":"2.Semester", "value":47},
-                {"name":"3.Semester", "value":39},
-                {"name":"4.Semester", "value":32},
-                {"name":"5.Semester", "value":27},
-                {"name":"6.Semester", "value":24}
-            ]
-        },
-        {
-            "name":"IMA2015",
-            "values": [
-                {"name":"1.Semester", "value":59},
-                {"name":"2.Semester", "value":44},
-                {"name":"3.Semester", "value":36},
-                {"name":"4.Semester", "value":33},
-                {"name":"5.Semester", "value":29},
-                {"name":"6.Semester", "value":28}
-            ]
-        },
-        {
-            "name":"IMA2016",
-            "values": [
-                {"name":"1.Semester", "value":59},
-                {"name":"2.Semester", "value":44},
-                {"name":"3.Semester", "value":38},
-                {"name":"4.Semester", "value":35},
-                {"name":"5.Semester", "value":33},
-                {"name":"6.Semester", "value":27}
-            ]
-        }
-    ];
-
-    var jsonData3 = [
-        {
-            "name":"Dataset1",
-            "values": [
-                {"name":"X", "value":0.5},
-                {"name":"Y", "value":0.7},
-                {"name":"Z", "value":0.3},
-                {"name":"size", "value":11},
-                {"name":"shape", "value":"sphere"}
-            ]
-        },
-        {
-            "name":"Dataset2",
-            "values": [
-                {"name":"X", "value":2.44},
-                {"name":"Y", "value":0.16},
-                {"name":"Z", "value":0.59},
-                {"name":"size", "value":22},
-                {"name":"shape", "value":"cone"}
-            ]
-        },
-        {
-            "name":"Dataset3",
-            "values": [
-                {"name":"X", "value":0.21},
-                {"name":"Y", "value":0.12},
-                {"name":"Z", "value":0.44},
-                {"name":"size", "value":12},
-                {"name":"shape", "value":"diamond"}
-            ]
-        },
-        {
-            "name":"Dataset4",
-            "values": [
-                {"name":"X", "value":3.16},
-                {"name":"Y", "value":0.82},
-                {"name":"Z", "value":0.12},
-                {"name":"size", "value":7},
-                {"name":"shape", "value":"sphere"}
-            ]
-        },
-        {
-            "name":"Dataset5",
-            "values": [
-                {"name":"X", "value":3.99},
-                {"name":"Y", "value":0.25},
-                {"name":"Z", "value":0.33},
-                {"name":"size", "value":18},
-                {"name":"shape", "value":"cone"}
-            ]
-        },
-        {
-            "name":"Dataset6",
-            "values": [
-                {"name":"X", "value":1.52},
-                {"name":"Y", "value":0.41},
-                {"name":"Z", "value":0.1},
-                {"name":"size", "value":10},
-                {"name":"shape", "value":"diamond"}
-            ]
-        }
-    ];
-
 
 
 var configuration_pc = {
@@ -214,64 +117,22 @@ var configuration_pc = {
     "fov": 45
 };
 
-var configuration_bc = {
-    "details": true,
-    "tooltip": true,
-    "showOnScreenControls": true,
-    "legend": true,
-    "startAnimation": true,
-    "chartAnimation": true,
-    "transparency": true,
-    "antialias": true,
-    "fov": 45
-};
 
-var configuration_sc = {
-    "details": true,
-    "tooltip": true,
-    "showOnScreenControls": true,
-    "legend": true,
-    "startAnimation": true,
-    "chartAnimation": true,
-    "transparency": true,
-    "antialias": true,
-    "fov": 45
-};
 
 
  var pieChart = anchart3d.createChart("pieChart")
-    .setConfig(configuration_bc)
-    .barChart()
-    .data(jsonData2)
-    .draw();
-
-var barChart = anchart3d.createChart("barChart")
-    .setConfig(configuration_bc)
-    .barChart()
-    .data(jsonData2)
-    .draw();
-
-var scatterChart = anchart3d.createChart("scatterChart")
-    .setConfig(configuration_sc)
-    .scatterChart()
-    .data(jsonData3)
+    .setConfig(configuration_pc)
+    .pieChart()
+    .data(jsonData1)
     .draw();
 
 
-    var swapPie = function () {
-        pieChart.data(jsonData1);
-        pieChart.swapData();
-    };
 
-    var swapBar = function () {
-        pieChart.data(jsonData2);
-        pieChart.swapData();
-    };
+var swapPie = function () {
+    pieChart.data(jsonData1);
+    pieChart.swapData();
+};
 
-    var swapScatter = function () {
-        scatterChart.data(jsonData3);
-        scatterChart.swapData();
-    };
 
 </script>
 
