improved the html pages and enhanced links and content

--- a/public/index.html
+++ b/public/index.html
@@ -21,35 +21,46 @@
 <br class="clear" />
 
 <div class="right">
-    
+
     <ul id="menu">
-    <li><a class="active" href="index.html">About</a></li>
-    <li>Demo
-        <ul>
-        <li><a href="pie.html">PieChart</a></li>
-        <li><a href="bar.html">BarChart</a></li>
-        <li><a href="scatter.html">ScatterChart</a>
-        <li><a href="multiple.html">Multiple</a>
-        </ul>
-    </li>
-    <li><a href="usage.html">Usage</a></li>
-    <li><a href="configuration.html">Configuration</a></li>
-    <li><a href="developing.html">Developing</a></li>
+        <li><a class="active" href="index.html">About</a></li>
+        <hr>
+        <li><u>Demos:</u>
+            <ul>
+                <li><a href="pie.html">PieChart</a></li>
+                <li><a href="bar.html">BarChart</a></li>
+                <li><a href="scatter.html">ScatterChart</a>
+                <li><a href="multiple.html">Multiple</a>
+            </ul>
+        </li>
+        <hr>
+        <li><a href="usage.html">Usage</a></li>
+        <li><a href="configuration.html">Configuration</a></li>
+        <li><a href="developing.html">Developing</a></li>
     </ul>
 
 </div>
 <div class="content">
     
     <h1>anchart3d</h1>
-    <h3>an open source library for interactive three dimensional charts</h3>
+    <h3>...is an open source library for interactive three dimensional charts in the browser</h3>
     <p>
-    This library has been created as part of an project on the FH Joanneum Graz. It was made by Amar Bajric, Michael Fuchs and Timo Hasenbichler and supervised by FH-Prof. DI Dr. Peter Salhofer.
+        This library has been created as part of a project on the <a href="https://fh-joanneum.at"><b>FH Joanneum Graz</b></a>
+        in the degree program <a href="https://fh-joanneum.at/informationsmanagement/bachelor/"><b>Information management</b></a> by the following students:
+        <ul>
+            <li><a href="https://github.com/amarbajric">Amar Bajric</a></li>
+            <li><a href="https://github.com/deKilla">Michael Fuchs</a></li>
+            <li><a href="https://github.com/timoooo">Timo Hasenbichler</a></li>
+        </ul>
+        Furthermore, this project was supervised by <b>Dipl.-Ing. Dr.techn. Peter Salhofer.</b>
     </p>
     <p>
-    The libray is one of just a few contender in the world of visualizing data in three dimensions using not only perspectives but interaction. Also it is completly free since it is open source. Our goal was to provide a good base and to show what the library is capable of and enable the community to build on that and make anchart3d a worthy contender in the world of data visualization.
+    The library is one of just a few contender in the world of visualizing data in three dimensions using not only perspectives but also interactions.
+    Also it is completely free, since it is open source. Our goal was to provide a good base for visualizing data in three dimensional space in the browser and to show what the library is capable of.
+    Moreover, it should enable the community to contribute to that, and make anchart3d a worthy contender in the world of data visualization.
     </p>
     <p>
-    The library is build using ES6 and relies on <a href="https://threejs.org/">three.js</a> to render the charts.
+    The library is build using ES6 and relies on the <a href="https://threejs.org/">three.js</a> library to render the charts in the browser.
     </p>
 
 </div>
