--- a/public/multiple.html
+++ b/public/multiple.html
@@ -21,27 +21,30 @@
 <br class="clear" />
 
 <div class="right">
-    
+
     <ul id="menu">
-    <li><a href="index.html">About</a></li>
-    <li>Demo
-        <ul>
-        <li><a href="pie.html">PieChart</a></li>
-        <li><a href="bar.html">BarChart</a></li>
-        <li><a href="scatter.html">ScatterChart</a>
-        <li><a class="active" href="multiple.html">Multiple</a>
-        </ul>
-    </li>
-    <li><a href="usage.html">Usage</a></li>
-    <li><a href="configuration.html">Configuration</a></li>
-    <li><a href="developing.html">Developing</a></li>
+        <li><a href="index.html">About</a></li>
+        <hr>
+        <li><u>Demos:</u>
+            <ul>
+                <li><a href="pie.html">PieChart</a></li>
+                <li><a href="bar.html">BarChart</a></li>
+                <li><a href="scatter.html">ScatterChart</a>
+                <li><a class="active" href="multiple.html">Multiple</a>
+            </ul>
+        </li>
+        <hr>
+        <li><a href="usage.html">Usage</a></li>
+        <li><a href="configuration.html">Configuration</a></li>
+        <li><a href="developing.html">Developing</a></li>
     </ul>
 
 </div>
 <div class="content">
     
-    <h1>multiple</h1>
-    <h3>displaying multiple charts on a single page</h3>
+    <h1>Multiple</h1>
+    <h3>Displaying multiple charts on a single page</h3>
+    <hr>
     <h3>PieChart</h3>
     <div id="pieChart"></div>
     <h3>BarChart</h3>
