--- a/public/scatter.html
+++ b/public/scatter.html
@@ -21,26 +21,28 @@
 <br class="clear" />
 
 <div class="right">
-    
+
     <ul id="menu">
-    <li><a href="index.html">About</a></li>
-    <li>Demo
-        <ul>
-        <li><a href="pie.html">PieChart</a></li>
-        <li><a href="bar.html">BarChart</a></li>
-        <li><a class="active" href="scatter.html">ScatterChart</a>
-        <li><a href="multiple.html">Multiple</a>
-        </ul>
-    </li>
-    <li><a href="usage.html">Usage</a></li>
-    <li><a href="configuration.html">Configuration</a></li>
-    <li><a href="developing.html">Developing</a></li>
+        <li><a href="index.html">About</a></li>
+        <hr>
+        <li><u>Demos:</u>
+            <ul>
+                <li><a href="pie.html">PieChart</a></li>
+                <li><a href="bar.html">BarChart</a></li>
+                <li><a class="active" href="scatter.html">ScatterChart</a>
+                <li><a href="multiple.html">Multiple</a>
+            </ul>
+        </li>
+        <hr>
+        <li><a href="usage.html">Usage</a></li>
+        <li><a href="configuration.html">Configuration</a></li>
+        <li><a href="developing.html">Developing</a></li>
     </ul>
 
 </div>
 <div class="content">
     
-    <h1>pieChart</h1>
+    <h1>ScatterChart</h1>
     <div id="scatterChart"></div>
 
 </div>
