--- a/public/configuration.html
+++ b/public/configuration.html
@@ -21,29 +21,31 @@
 <br class="clear" />
 
 <div class="right">
-    
+
     <ul id="menu">
-    <li><a href="index.html">About</a></li>
-    <li>Demo
-        <ul>
-        <li><a href="pie.html">PieChart</a></li>
-        <li><a href="bar.html">BarChart</a></li>
-        <li><a href="scatter.html">ScatterChart</a>
-        <li><a href="multiple.html">Multiple</a>
-        </ul>
-    </li>
-    <li><a href="usage.html">Usage</a></li>
-    <li><a class="active" href="configuration.html">Configuration</a></li>
-    <li><a href="developing.html">Developing</a></li>
+        <li><a href="index.html">About</a></li>
+        <hr>
+        <li><u>Demos:</u>
+            <ul>
+                <li><a href="pie.html">PieChart</a></li>
+                <li><a href="bar.html">BarChart</a></li>
+                <li><a href="scatter.html">ScatterChart</a>
+                <li><a href="multiple.html">Multiple</a>
+            </ul>
+        </li>
+        <hr>
+        <li><a href="usage.html">Usage</a></li>
+        <li><a class="active" href="configuration.html">Configuration</a></li>
+        <li><a href="developing.html">Developing</a></li>
     </ul>
 
 </div>
 <div class="content">
     
-    <h1>configuration</h1>
-    <h3>how to configure anchart3d to your liking</h3>
+    <h1>Configuration</h1>
+    <h3>How to configure anchart3d charts to your liking</h3>
     <p>
-    Once you're done with the basic setup as described <a href="usage.html">here</a> you can start configuring using the fluid api based methods as described below.
+    Once you're done with the basic setup, as described <a href="usage.html">here</a>, you can start configuring using the fluent api based methods as described below.
     </p>
     <p>
     You first need to create a so called configuration array that holds a set of configurations.
