--- a/public/developing.html
+++ b/public/developing.html
@@ -21,27 +21,29 @@
 <br class="clear" />
 
 <div class="right">
-    
+
     <ul id="menu">
-    <li><a href="index.html">About</a></li>
-    <li>Demo
-        <ul>
-        <li><a href="pie.html">PieChart</a></li>
-        <li><a href="bar.html">BarChart</a></li>
-        <li><a href="scatter.html">ScatterChart</a>
-        <li><a href="multiple.html">Multiple</a>
-        </ul>
-    </li>
-    <li><a href="usage.html">Usage</a></li>
-    <li><a href="configuration.html">Configuration</a></li>
-    <li><a class="active" href="developing.html">Developing</a></li>
+        <li><a href="index.html">About</a></li>
+        <hr>
+        <li><u>Demos:</u>
+            <ul>
+                <li><a href="pie.html">PieChart</a></li>
+                <li><a href="bar.html">BarChart</a></li>
+                <li><a href="scatter.html">ScatterChart</a>
+                <li><a href="multiple.html">Multiple</a>
+            </ul>
+        </li>
+        <hr>
+        <li><a href="usage.html">Usage</a></li>
+        <li><a href="configuration.html">Configuration</a></li>
+        <li><a class="active" href="developing.html">Developing</a></li>
     </ul>
 
 </div>
 <div class="content">
     
-    <h1>developing</h1>
-    <h3>how you can contribute to this project</h3>
+    <h1>Developing</h1>
+    <h3>How you can contribute to this project</h3>
     <p>
     Feel free to <a href="https://github.com/deKilla/anchart3d" target="blank">fork</a> this project an participate in it's development.
     </p>
